ui: z-index fix for folder information

--- a/frontend/nextcp-ui/src/app/mediaserver/display-container/display-container-header/display-container-header.component.scss
+++ b/frontend/nextcp-ui/src/app/mediaserver/display-container/display-container-header/display-container-header.component.scss
@@ -33,10 +33,8 @@
 .regular {
     @extend .plainText;
     font-size     : 1rem;
-    font-weight   : 500;
     letter-spacing: 0.07rem;
     color         : rgba(var(--glas-white-4));
-    margin-top    : 4px;
 }
 
 .highlight {
@@ -92,7 +90,6 @@
     left     : 32px;
     display  : table-cell;
     max-width: 400px;
-    z-index  : 10;
 }
 
 .button-row .mat-mdc-button-base {
@@ -158,7 +155,6 @@
     -moz-backdrop-filter             : blur(64px) saturate(120%) brightness(80%);
     backdrop-filter                  : blur(64px) saturate(120%) brightness(80%);
     pointer-events                   : none;
-    z-index                          : -1;
     // background-position    : 0 -500px;
 }
 
@@ -174,7 +170,6 @@
 
     height             : 100%;
     background-repeat  : calc(var(--vh, 1vh) * 100);
-    z-index            : 0;
     background-position: 0 -500px;
 }
 
